--- a/src/manifest.json
+++ b/src/manifest.json
@@ -31,8 +31,27 @@
   "side_panel": {
     "default_path": "sidepanel.html"
   },
+
+  "options_page": "dashboard.html",
   
   "action": {
     "default_title": "sideNote - Quick notes for this page"
+  },
+
+  "icons": {
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "64": "icons/icon64.png",
+    "128": "icons/icon128.png"
+  },
+  
+  "commands": {
+    "toggle-sidepanel": {
+      "suggested_key": {
+        "default": "Alt+S"
+      },
+      "description": "Toggle the side panel"
+    }
   }
 } 
