removed unncessary permissions from MV3

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,15 +6,17 @@
   
   "permissions": [
     "storage",
-    "activeTab",
-    "sidePanel",
-    "tabs"
+    "sidePanel"
   ],
   
   "host_permissions": [
     "http://*/*",
     "https://*/*"
   ],
+
+  "side_panel": {
+    "default_path": "sidepanel.html"
+  },
   
   "background": {
     "service_worker": "background.js"
